--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,11 +6,19 @@
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/rainbowDancer.js"></script>
+    <script src="src/sexyDancer.js"></script>
+
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" id="lineUp">Line Up</a>
+      <a href="#" id="wavify">Wavify</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeDancer">add a  dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a Blinky dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeRainbowDancer">add a Rainbow dancer</a>
+       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSexyDancer">add a Sexy dancer</a> </div>
     <script src="src/init.js"></script>
   </body>
 </html>
