--- a/dancefloor.html
+++ b/dancefloor.html
@@ -13,6 +13,7 @@
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
+      <a href="#" id="play"> PLAY MODE </a>
       <a href="#" id="lineUp">Line Up</a>
       <a href="#" id="wavify">Wavify</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeDancer">add a  dancer</a>
