--- a/dancefloor.html
+++ b/dancefloor.html
@@ -8,18 +8,22 @@
     <script src="src/blinkyDancer.js"></script>
     <script src="src/rainbowDancer.js"></script>
     <script src="src/sexyDancer.js"></script>
+    <script src="src/sharkDancer.js"></script>
+    <script src="src/stopwatch.js"></script>
 
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
+      <a href="#" id="type"> Type MODE </a>
       <a href="#" id="play"> PLAY MODE </a>
       <a href="#" id="lineUp">Line Up</a>
       <a href="#" id="wavify">Wavify</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeDancer">add a  dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a Blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeRainbowDancer">add a Rainbow dancer</a>
-       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSexyDancer">add a Sexy dancer</a> </div>
+       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSexyDancer">add a Sexy dancer</a>
+       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSharkDancer">add a Left Shark</a>  </div>
     <script src="src/init.js"></script>
   </body>
 </html>
